kustomize/overlays/docker-server/basic-authentication-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-authentication
  namespace: traefik
spec:
  basicAuth:
    secret: basic-authentication
