kustomize/overlays/docker-server/dashboard-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-ingress-controller-dashboard-whitelist
spec:
  ipWhiteList:
    sourceRange:
       - 192.168.254.252/32
