kustomize/overlays/docker-server/http-to-https-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
