kustomize/overlays/docker-server/cert-manager-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  template:
    spec:
      dnsConfig:
        nameservers:
        - "1.1.1.1"
        - "9.9.9.9"
