kustomize/overlays/docker-server/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: traefik
          args:
            - --accesslog
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd
            - --entrypoints.elasticsearch.Address=:9200
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --serverstransport.insecureskipverify=true
            - --api.dashboard=true
            - --api.insecure=true
            ###- --certificatesresolvers.myresolver.acme.tlschallenge
            ###- --certificatesresolvers.myresolver.acme.email=jay.amorin@gmail.com
            ###- --certificatesresolvers.myresolver.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            ###- --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --log.level=DEBUG
          ports:
            - name: elasticsearch
              containerPort: 9200
