kustomize/overlays/docker-server/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller-dashboard
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      name: dashboard
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: traefik-ingress-controller
    app.kubernetes.io/component: load-balancer
