kustomize/overlays/docker-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
spec:
  ports:
    - protocol: TCP
      name: elasticsearch
      port: 9200
      targetPort: elasticsearch
  externalIPs:
    - 192.168.254.250
  type: LoadBalancer
