kustomize/overlays/docker-server/kubernetes-dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kubernetes-dashboard.localdomain.com`)
      services:
        - kind: Service
          name: kubernetes-dashboard
          port: 443
      middlewares:
        - name: traefik-http-to-https@kubernetescrd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes-dashboard.localdomain.com`)
      services:
        - kind: Service
          name: kubernetes-dashboard
          port: 443
  tls:
    secretName: kubernetes-dashboard-selfsigned
