kustomize/overlays/docker-server/traefik-ingress-controller-dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-controller-dashboard-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard.localdomain.com`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - kind: Service
          name: traefik-ingress-controller-dashboard
          port: 8080
      middlewares:
        - name: traefik-http-to-https@kubernetescrd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-controller-dashboard-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard.localdomain.com`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - kind: Service
          name: traefik-ingress-controller-dashboard
          port: 8080
      middlewares:
        - name: traefik-basic-authentication@kubernetescrd
  tls:
    secretName: traefik-dashboard-selfsigned
